<resources>
    <!-- Global -->
    <string name="app_name">FeteDeLaScience</string>

    <!-- Tutorial -->
    <string name="tutorial_next">Suivant</string>
    <string name="tutorial_end">Terminé</string>

    <string name="title_1">Bienvenue !</string>
    <string name="title_2">Découvre !</string>
    <string name="title_3">Filtre !</string>
    <string name="title_4">Localise !</string>
    <string name="title_5">Evalue !</string>
    <string name="title_6">Planifie !</string>
    <string name="title_7">Planifie !</string>
    <string name="title_8">Calcule !</string>

    <string name="tuto_1">Nous te proposons un rapide tutoriel afin de découvrir l\'application.</string>
    <string name="tuto_2">Visualise l\'ensemble des événements à ne pas manquer autour de chez toi ou plus loin encore.</string>
    <string name="tuto_3">Tu peux filtrer les informations via la loupe en haut à droite.</string>
    <string name="tuto_4">Les événements peuvent être visualisés sur une carte intéractive. En cliquant sur le menu en haut à gauche.</string>
    <string name="tuto_5">Tu peux aussi évaluer la qualité de chaque événement.</string>
    <string name="tuto_6">Des parcours peuvent être créés. Les parcours sont des enchaînements d\'évènements.</string>
    <string name="tuto_7">Tu as aussi la possibilité de regarder les parcours déjà proposés.</string>
    <string name="tuto_8">Un récapitulatif de la qualité des événements est disponible.</string>


    <!-- Navigation drawer -->
    <string name="navdrawer_default_header_email">Bonjour,</string>
    <string name="navdrawer_default_header_name">Utilisateur anonyme</string>
    <string name="navdrawer_open">Open navigation drawer</string>
    <string name="navdrawer_close">Close navigation drawer</string>
    <string name="navdrawer_list">Liste des événements</string>
    <string name="navdrawer_map">Carte des événements</string>
    <string name="navdrawer_route">Parcours</string>
    <string name="navdrawer_stats">Statistiques</string>
    <string name="navdrawer_logout">Déconnexion</string>
    <string name="navdrawer_admin">Organisateur</string>
    <string name="navdrawer_settings">Paramètres</string>

    <!-- Login -->
    <string name="login_activity_title">Connexion</string>
    <string name="login_activity_input_email">Email</string>
    <string name="login_activity_input_password">Mot de passe</string>
    <string name="login_activity_btn_login_default">Connexion</string>
    <string name="login_activity_error_login">Impossible de vous connecter</string>
    <string name="login_activity_connected">Vous êtes connecté !</string>
    <string name="login_activity_disconnected">Vous êtes déconnecté !</string>

    <!-- Menu -->
    <string name="menu_icon_list">View in list</string>
    <string name="menu_icon_map">View in map</string>
    <string name="menu_icon_search">Search</string>
    <string name="menu_icon_settings">Paramètres</string>
    <string name="menu_icon_share">Partager</string>

    <!-- ListViewFragmentment -->
    <string name="fragment_list_textview">Hello blank fragment</string>

    <!--activity_detail_event-->
    <string name="headerLien">Lien</string>
    <string name="headerHoraire">Horaire</string>
    <string name="headerAddresse">Adresse</string>
    <string name="headerDescription">Description</string>
    <string name="detail_event_organisateur_title">Organisateur</string>
    <string name="detail_event_organisateur_txt">Mettez à jour le taux de remplissage de cet événement, actuellement : %1$d%%</string>
    <string name="detail_event_filling_rate">Taux de remplissage: %1$d%%</string>
    <string name="not_note">Pas encore de note</string>
    <string name="note_title">Note et taux de remplissage</string>
    <string name="note_moyenne">Note moyenne </string>
    <string name="share_txt">Salut, cet événement : %1$s à %2$s pourrait t\'intéresser ! %3$s</string>

    <!--activity_create_parcours-->
    <string name="tutorial">Rechercher vos événements favories via le truc ci dessus. Puis ajouter les à votre parcours grace aux boutons "+" </string>
    <string name="button_valider">Créer son parcours</string>
    <string name="hint_search">Chercher vos événements</string>
    <string name="text_popup_name_parcours">Le nom de votre parcours</string>
    <string name="text_popup_error">Il faut au moins un événement pour créer un parcours</string>
    <string name="text_popup_error_containt">Cette évenement est déja ajouté à votre parcours</string>
    <string name="text_popup_create">Votre Parcours a bien été créé</string>
    <string name="text_popup_empty">Votre parcours doit contenir un nom</string>

    <!--activity_detail_parcours-->
    <string name="user_parcours">Vous avez créé ce parcours</string>

    <!--fragment_listevent-->
    <string name="popup_filtre_titre">Titre</string>
    <string name="popup_filtre_ville">Ville</string>
    <string name="popup_filtre_date">Date</string>

    <!-- Settings -->
    <string name="settings_about_title">À propos</string>
    <string name="settings_about_content">L\'application liste les différents événements pour la fête de la science de 2017. Elle a été réalisée par June, Antoine et Emmanuel dans le cadre du projet de MMM.</string>
    <string name="settings_version_title">Version</string>
</resources>
