<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/login_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/login_activity_input_email" />

    <EditText
        android:id="@+id/login_input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/login_input_email"
        android:layout_marginTop="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/login_activity_input_password" />

    <Button
        android:id="@+id/login_btn_signin_default"
        android:text="@string/login_activity_btn_login_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/login_input_password"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
